cpp/atbash-cipher/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.010s
user	0m0.002s
sys	0m0.008s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
[ 25%] Building CXX object CMakeFiles/atbash-cipher.dir/atbash_cipher_test.cpp.o
[ 50%] Building CXX object CMakeFiles/atbash-cipher.dir/atbash_cipher.cpp.o
[ 75%] Building CXX object CMakeFiles/atbash-cipher.dir/test/tests-main.cpp.o
[100%] Linking CXX executable atbash-cipher
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
[100%] Built target atbash-cipher
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
===============================================================================
All tests passed (12 assertions in 12 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
[100%] Built target test_atbash-cipher
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/atbash-cipher.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/atbash-cipher.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)3822"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
atbash_cipher.cpp                             28      26    92%   9,32
atbash_cipher_test.cpp                        36      36   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         98      89    90%
------------------------------------------------------------------------------
lines: 90.8% (89 out of 98)
branches: 41.6% (104 out of 250)

real	0m10.536s
user	0m9.374s
sys	0m1.099s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.240s
user	0m0.151s
sys	0m0.091s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.231s
user	0m0.170s
sys	0m0.062s

===============================================================================

Running: clang-format-16 -style=file -i ./atbash_cipher.cpp ./atbash_cipher_test.cpp ./atbash_cipher.h

real	0m0.036s
user	0m0.024s
sys	0m0.012s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./atbash_cipher.cpp ./atbash_cipher_test.cpp ./atbash_cipher.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/atbash_cipher.h:6:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/atbash_cipher.h.

real	0m0.599s
user	0m0.553s
sys	0m0.046s


real	0m0.602s
user	0m0.554s
sys	0m0.048s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
21249 warnings generated.
56605 warnings generated.
56605 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/atbash_cipher.h.
Suppressed 56610 warnings (56605 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.375s
user	0m7.297s
sys	0m0.078s
Running: clang-tidy-16 ./atbash_cipher.cpp ./atbash_cipher_test.cpp ./atbash_cipher.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/atbash-cipher/atbash_cipher.h:6:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m7.378s
user	0m7.299s
sys	0m0.080s

===============================================================================

